# fastbook

./: .gitignore  02_production.ipynb  pyproject.toml
fastbook/: utils.py  wikimedia_url_fetcher.py
